--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cypressautomation",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is cypress test project!!",
   "main": "index.js",
   "scripts": {
     "test": "node_modules\\.bin\\cypress run",
