--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is cypress test project!!",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules\\.bin\\cypress run",
+    "test": "./node_modules//.bin//cypress open",
     "headTest": "npm run test -- --headed",
     "chromeTest": "npm run test -- --browser chrome",
     "recordDashBoardTest": "npm run test-- --record --key ae444444-17bc-4bae-8348-67d43d29e82 --reporter mochawesome"
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.7.3",
+    "cypress": "^13.15.0",
     "cypress-iframe": "^1.0.1",
     "cypress-mochawesome-reporter": "^3.8.2"
   },
